@@ -239,7 +239,7 @@ limitations under the License.
       </table>
     </div>
     
-    <div graph data="graphData" leaf-count="leafCount" helper-data="helperData" is-radial="isRadial" id="graph-content" class="content clearfix" ng-show="showGraph">
+    <div graph data="graphData" leaf-count="leafCount" helper-data="helperData" id="graph-content" class="content clearfix" ng-show="showGraph">
 
       <div id="canvas"></div>
 
